--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node build/server/bundle.js",
-    "build": "rm -rf build && NODE_ENV=production webpack --progress --config webpack.config.server.js && NODE_ENV=production webpack --progress --config webpack.config.client.js",
+    "build": "rimraf build && cross-env NODE_ENV=production webpack --progress --config webpack.config.server.js && cross-env NODE_ENV=production webpack --progress --config webpack.config.client.js",
     "postinstall": "npm run build",
-    "dev": "NODE_ENV=development concurrently -c blue,cyan,magenta \"webpack --watch --config webpack.config.server.js\" \"sleep 3 && nodemon --watch build/server build/server/bundle.js\" \"webpack-dev-server -d --hot --inline --no-info --port 3020 --config webpack.config.client.js\"",
+    "dev": "cross-env NODE_ENV=development concurrently -c blue,cyan,magenta \"webpack --watch --config webpack.config.server.js\" \"nodemon --watch build/server build/server/bundle.js\" \"webpack-dev-server -d --hot --inline --no-info --port 3020 --config webpack.config.client.js\"",
     "lint": "eslint ui",
     "test": "npm run lint",
     "persistgraphql": "persistgraphql ui --add_typename"
@@ -27,6 +27,7 @@
     "babel-eslint": "^7.0.0",
     "babel-register": "^6.9.0",
     "concurrently": "^3.0.0",
+    "cross-env": "^3.1.4",
     "eslint": "^3.8.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-babel": "^4.0.0",
@@ -34,6 +35,7 @@
     "eslint-plugin-jsx-a11y": "^2.2.1",
     "eslint-plugin-react": "^6.2.0",
     "nodemon": "^1.9.2",
+    "rimraf": "^2.6.1",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
