--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "postinstall": "npm run build",
     "dev": "cross-env NODE_ENV=development concurrently -c blue,cyan,magenta \"webpack --watch --config webpack.config.server.js\" \"nodemon --watch build/server build/server/bundle.js\" \"webpack-dev-server -d --hot --inline --no-info --port 3020 --config webpack.config.client.js\"",
     "lint": "eslint ui",
-    "test": "npm run lint",
+    "test": "npm run lint && jest",
     "persistgraphql": "persistgraphql ui --add_typename"
   },
   "repository": {
@@ -25,6 +25,7 @@
   "devDependencies": {
     "babel-cli": "^6.8.0",
     "babel-eslint": "^7.0.0",
+    "babel-jest": "^19.0.0",
     "babel-register": "^6.9.0",
     "concurrently": "^3.0.0",
     "cross-env": "^3.1.4",
@@ -34,7 +35,9 @@
     "eslint-plugin-import": "^1.8.1",
     "eslint-plugin-jsx-a11y": "^2.2.1",
     "eslint-plugin-react": "^6.2.0",
+    "jest": "^19.0.2",
     "nodemon": "^1.9.2",
+    "react-test-renderer": "^15.4.2",
     "rimraf": "^2.6.1",
     "webpack-dev-server": "^1.14.1"
   },
@@ -71,7 +74,8 @@
     "env": {
       "node": true,
       "browser": true,
-      "mocha": true
+      "mocha": true,
+      "jest": true
     },
     "extends": "airbnb",
     "globals": {
@@ -86,6 +90,12 @@
           "skipShapeProps": true
         }
       ]
+    }
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "babel-jest",
+      "\\.(graphql|gql)$": "<rootDir>/graphql-loader-jest.js"
     }
   }
 }
