--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     },
     "rules": {
       "camelcase": 0,
+      "linebreak-style": 0,
       "react/jsx-filename-extension": 0,
       "react/no-unused-prop-types": [
         2,
