--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "githunt",
+  "name": "connect-tech-apollo-2017",
   "version": "1.0.0",
-  "description": "Example app for Apollo",
+  "description": "Code Samples for Connect.Tech 'React and GraphQL with Apollo' talk",
   "main": "index.js",
   "scripts": {
     "start": "node build/server/bundle.js",
@@ -14,58 +14,58 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/apollographql/GitHunt.git"
+    "url": "git+https://github.com/peisenmann/Connect.Tech-Apollo-2017.git"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/apollographql/GitHunt/issues"
+    "url": "https://github.com/peisenmann/Connect.Tech-Apollo-2017/issues"
   },
-  "homepage": "https://github.com/apollographql/GitHunt#readme",
+  "homepage": "https://github.com/peisenmann/Connect.Tech-Apollo-2017#readme",
   "devDependencies": {
-    "babel-cli": "^6.8.0",
-    "babel-eslint": "^7.0.0",
-    "babel-register": "^6.9.0",
-    "concurrently": "^3.0.0",
-    "eslint": "^3.8.1",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-plugin-babel": "^4.0.0",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-plugin-jsx-a11y": "^2.2.1",
-    "eslint-plugin-react": "^6.2.0",
-    "nodemon": "^1.9.2",
-    "webpack-dev-server": "^1.14.1"
+    "babel-cli": "6.26.0",
+    "babel-eslint": "8.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-register": "6.26.0",
+    "concurrently": "3.5.0",
+    "eslint": "4.7.1",
+    "eslint-config-airbnb": "15.1.0",
+    "eslint-plugin-babel": "4.1.2",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-react": "7.3.0",
+    "nodemon": "1.12.1",
+    "webpack-dev-server": "2.8.2"
   },
   "dependencies": {
-    "apollo-client": "^1.8.0",
-    "babel-core": "^6.8.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-2": "^6.5.0",
-    "classnames": "^2.2.5",
-    "css-loader": "^0.26.1",
-    "express": "^4.14.0",
-    "graphql": "^0.9.6",
-    "graphql-anywhere": "^2.2.0",
-    "graphql-tag": "^1.3.1",
-    "http-proxy-middleware": "^0.17.1",
-    "immutability-helper": "^2.1.0",
-    "isomorphic-fetch": "^2.2.1",
-    "json-loader": "^0.5.4",
-    "node-emoji": "^1.3.0",
-    "persistgraphql": "^0.3.0",
-    "react": "^15.4.2",
-    "react-apollo": "^1.0.0-rc.3",
-    "react-dom": "^15.1.0",
-    "react-ga": "^2.1.0",
-    "react-router": "^4.1.2",
-    "react-router-dom": "^4.1.2",
-    "react-timeago": "^3.0.0",
-    "redux": "^3.5.2",
-    "style-loader": "^0.13.1",
-    "subscriptions-transport-ws": "^0.7.0",
-    "webpack": "2.2.1"
+    "apollo-client": "1.9.2",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "classnames": "2.2.5",
+    "css-loader": "0.28.7",
+    "express": "4.15.4",
+    "graphql": "0.11.3",
+    "graphql-anywhere": "3.1.0",
+    "graphql-tag": "2.4.2",
+    "http-proxy-middleware": "0.17.4",
+    "immutability-helper": "2.4.0",
+    "isomorphic-fetch": "2.2.1",
+    "json-loader": "0.5.7",
+    "node-emoji": "1.8.1",
+    "persistgraphql": "0.3.8",
+    "react": "15.6.1",
+    "react-apollo": "1.4.15",
+    "react-dom": "15.6.1",
+    "react-ga": "2.2.0",
+    "react-router": "4.2.0",
+    "react-router-dom": "4.2.2",
+    "react-timeago": "3.4.3",
+    "redux": "3.7.2",
+    "style-loader": "0.18.2",
+    "subscriptions-transport-ws": "0.9.0",
+    "webpack": "3.6.0"
   },
   "eslintConfig": {
     "env": {
@@ -77,8 +77,19 @@
     "globals": {
       "ga": true
     },
+    "parser": "babel-eslint",
     "rules": {
       "camelcase": 0,
+      "object-curly-spacing": 0,
+      "import/extensions": 0,
+      "import/prefer-default-export": 0,
+      "import/no-unresolved": 0,
+      "import/no-extraneous-dependencies": 0,
+      "import/no-duplicates": 0,
+      "import/no-named-as-default": 0,
+      "import/no-named-as-default-member": 0,
+      "jsx-a11y/href-no-hash": 0,
+      "react/require-default-props": 0,
       "react/jsx-filename-extension": 0,
       "react/no-unused-prop-types": [
         2,
