--- a/package.json
+++ b/package.json
@@ -80,7 +80,9 @@
     "parser": "babel-eslint",
     "rules": {
       "camelcase": 0,
+      "no-plusplus": 0,
       "object-curly-spacing": 0,
+      "no-use-before-define": 0,
       "import/extensions": 0,
       "import/prefer-default-export": 0,
       "import/no-unresolved": 0,
